2001-11-05  Bruno Haible  <haible@clisp.cons.org>

	* de.po: Update from Karl Eichwalder.
	* tr.po: Update from Nilgün Belma Bugüner.

2001-10-30  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in.in (dist2): Distribute LINGUAS if it exists.

2001-10-10  Bruno Haible  <haible@clisp.cons.org>

	* et.po: Add Plural-Forms field.
	* pt_BR.po: Likewise.
	* zh.po: Likewise.
	* ja.po: Change charset from sjis to SHIFT_JIS.
	* ru.po: Add missing plural cases.

2001-10-08  Bruno Haible  <haible@clisp.cons.org>

	* POTFILES.in: Add src/hostname.c, src/msginit.c.

2001-10-08  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in.in ($(PACKAGE).pot): Don't extract all comments, only
	those starting with "TRANSLATORS:".

2001-09-27  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in.in (install-strip, installdirs, installdirs-exec,
	installdirs-data, installdirs-data-no, installdirs-data-yes): New
	rules.

2001-09-18  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in.in (MSGMERGE_UPDATE): New variable.
	(.SUFFIXES): Remove .pox.
	(.po.pox): Remove rule.
	($(POFILES)): New rule.
	(mostlyclean): Don't remove *.pox.
	(force): New target.

2001-10-20  Bruno Haible  <haible@clisp.cons.org>

	* es.po: Update from Max de Mendizábal <max@upn.mx>.
	* sk.po: New file, from Marcel Telka <marcel@telka.sk>.
	* LINGUAS: Add sk.

2001-08-30  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in.in (.po.mo, .po.gmo): Add msgfmt option -c, to guarantee
	the PO file is really valid.

2001-07-28  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in.in (CC, DEFS, CFLAGS, CPPFLAGS, INCLUDES, COMPILE):
	Remove variables.
	(.SUFFIXES): Remove .c and .o.
	(.c.o): Remove rule.

2001-07-22  Bruno Haible  <haible@clisp.cons.org>

	* LINGUAS: New file, extracted from toplevel configure.in.

2001-07-22  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in.in: Ensure @CATALOGS@ is not used if NLS is disabled.
	(uninstall): Depend on uninstall-exec and uninstall-data.