@@ -1,3 +1,9 @@
+2001-11-06  Paolo Bonzini <bonzini@gnu.org>
+            Bruno Haible  <haible@clisp.cons.org>
+
+	* Makefile.in.in (update-po): Avoid writing in $(srcdir) unless
+	absolutely necessary. Writing in the builddir is allowed, though.
+
 2001-11-05  Bruno Haible  <haible@clisp.cons.org>
 
 	* de.po: Update from Karl Eichwalder.
